@@ -124,7 +124,7 @@ EmberEntity::~EmberEntity()
 	//mSceneManager->destroySceneNode(getSceneNode()->getName());
 }
 
-void EmberEntity::init(const Atlas::Objects::Entity::GameEntity &ge)
+void EmberEntity::init(const Atlas::Objects::Entity::RootEntity &ge)
 {
 	Eris::Entity::init(ge);
 	
